--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,33 @@
 {
-  "extends": "next/core-web-vitals"
-  
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "plugin:react/recommended",
+        "standard-with-typescript"
+    ],
+    "overrides": [
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest"
+    },
+    "plugins": [
+        "react"
+    ],
+    "rules": {
+      
+        // other rules
+        "jsx-a11y/no-static-element-interactions": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "react/prop-types": "off",
+        "no-html-link-for-pages": [
+          "error",
+          {
+            "pagesDir": "./src/app/pages",
+            "extensions": [".js", ".jsx"]
+          }
+        ]
+      
+    }
 }
