--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       uses: easingthemes/ssh-deploy@v2.2.7
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
-        ARGS: "-rltgoDzvO --delete"
+        ARGS: "-rltgoDzvO --delete -v"
       with:
         REMOTE_HOST: ${{ secrets.SERVER_IP }}
         REMOTE_USER: ${{ secrets.SERVER_USERNAME }}
