--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,10 @@ jobs:
     - name: Setup Remote Docker
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
+        host: 54.224.3.158
+        username: ubuntu
         key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
-        port: ${{ secrets.SERVER_SSH_PORT }}
+        port: 22
     - name: Upload project files to server
       uses: actions/upload-artifact@v2
       with:
