--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: project-files
-        path: /path/to/your/project
+        path: ${{ github.workspace }}
     - name: Install dependencies and build project
       run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "cd /path/to/your/project && npm install && npm run build"
     - name: Restart Nginx server
