--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,13 +25,13 @@ jobs:
         name: czcaterring-business
         path: ${{ github.workspace }}
     - name: Install dependencies and build project
-      run: |
-         ssh -i ${{ secrets.SERVER_SSH_PRIVATE_KEY }} ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} ${{ secrets.SERVER_DIR }} "npm install && npm run build"
       env:
         SERVER_USERNAME: ${{ secrets.SERVER_USERNAME }}
         SERVER_IP: ${{ secrets.SERVER_IP }}
         SERVER_SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
         SERVER_DIR: ${{ secrets.SERVER_DIR }}
+      run: |
+         ssh -i "$env:SERVER_SSH_PRIVATE_KEY" "$env:SERVER_USERNAME"@"$env:SERVER_IP" "$env:SERVER_DIR npm install && npm run build"
     - name: Restart Nginx server
       run: |
         ${{ secrets.SERVER_SSH_PRIVATE_KEY }} ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo systemctl restart nginx"
