--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,13 +25,10 @@ jobs:
         name: czcaterring-business
         path: ${{ github.workspace }}
     - name: Install dependencies and build project
-      env:
-        SERVER_USERNAME: ubuntu
-        SERVER_IP: 54.224.3.158
-        SERVER_SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
-        SERVER_DIR: ${{ secrets.SERVER_DIR }}
       run: |
-         ssh -i ${{ secrets.SERVER_SSH_PRIVATE_KEY }} ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "cd ${{ secrets.SERVER_DIR }} && npm install && npm run build"    
+       ssh -i ${{ secrets.SERVER_SSH_PRIVATE_KEY }} ubuntu@54.224.3.158 "cd /var/www/html && npm install && npm run build"
+      env:
+       SERVER_SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}  
     - name: Restart Nginx server
       run: |
         ${{ secrets.SERVER_SSH_PRIVATE_KEY }} ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo systemctl restart nginx"
