--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,9 @@ jobs:
        SERVER_SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}  
     - name: Restart Nginx server
       run: |
-        ${{ secrets.SERVER_SSH_PRIVATE_KEY }} ubuntu@54.224.3.158 "sudo systemctl restart nginx"
+        ssh -i ${{ secrets.SERVER_SSH_PRIVATE_KEY }} ubuntu@54.224.3.158 "sudo systemctl restart nginx"
       env:
         SERVER_USERNAME: ${{ secrets.SERVER_USERNAME }}
         SERVER_IP: ${{ secrets.SERVER_IP }}
         SERVER_SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
+
