--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         host: 54.224.3.158
         username: ubuntu
-        key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
+        key: ${{ secrets.PRIVATESSHKEYS }}
         port: 22
     - name: Upload project files to server
       uses: actions/upload-artifact@v3
@@ -26,14 +26,14 @@ jobs:
         path: ${{ github.workspace }}
     - name: Install dependencies and build project
       run: |
-       ssh -i ${{ secrets.SERVER_SSH_PRIVATE_KEY }} ubuntu@54.224.3.158 "cd /var/www/html && npm install && npm run build"
+       ssh -i ${{ secrets.PRIVATESSHKEYS }} ubuntu@54.224.3.158 "cd /var/www/html && npm install && npm run build"
       env:
-       SERVER_SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}  
+       SERVER_SSH_PRIVATE_KEY: ${{ secrets.PRIVATESSHKEYS }}  
     - name: Restart Nginx server
       run: |
-        ssh -i ${{ secrets.SERVER_SSH_PRIVATE_KEY }} ubuntu@54.224.3.158 "sudo systemctl restart nginx"
+        ssh -i ${{ secrets.PRIVATESSHKEYS }} ubuntu@54.224.3.158 "sudo systemctl restart nginx"
       env:
         SERVER_USERNAME: ${{ secrets.SERVER_USERNAME }}
         SERVER_IP: ${{ secrets.SERVER_IP }}
-        SERVER_SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
+        SERVER_SSH_PRIVATE_KEY: ${{ secrets.PRIVATESSHKEYS }}
 
