--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "eslint": "^8.39.0",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^5.0.4"
