--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.0",
     "@react-google-maps/api": "^2.18.1",
     "@types/googlemaps": "^3.43.3",
     "@types/node": "18.14.6",
